--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,6 +4,11 @@
 @import './base.scss';
 @import './typography.scss';
 
+// Components
+
+@import './components/Divider.scss';
+
 // Containers
 
 @import './containers/App.scss';
+@import './containers/Banner.scss';
