--- a/src/scss/containers/Banner.scss
+++ b/src/scss/containers/Banner.scss
@@ -41,7 +41,12 @@
             justify-content: center;
             align-items: center;
             box-sizing: border-box;
-            border: 3px solid white;
+            border: 3px solid rgba(white, .5);
+            transition: all .3s ease-in-out;
+
+            &:hover {
+                border: 3px solid white;
+            }
 
             a,
             a:active,
@@ -62,18 +67,37 @@
         grid-template-rows: 7.2rem;
         grid-gap: 3rem;
 
-        div {
-            box-sizing: border-box;
+        &-container {
+            position: relative;
             display: flex;
-            height: 100%;
-            align-items: baseline;
-            border-top: 3px solid rgba(white, .5);
+            align-items: center;
             cursor: pointer;
             transition: all .3s ease-in-out;
+            border-top: 3px solid rgba(white, .5);
 
             &:hover {
                 border-top: 3px solid white;
             }
+
+            div {
+                box-sizing: border-box;
+                display: flex;
+                align-items: baseline;
+            }
+        }
+
+        &-indicator {
+            position: absolute;
+            width: 0%;
+            height: 3px;
+            left: 0;
+            top: -3px;
+            background: #f38181;
+            transition: all .3s ease-in-out;
+        }
+
+        &-number {
+            margin-right: 1rem;
         }
     }
 }
