--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,8 +7,12 @@
 // Components
 
 @import './components/Divider.scss';
+@import './components/SectionTitle.scss';
 
 // Containers
 
 @import './containers/App.scss';
 @import './containers/Banner.scss';
+@import './containers/AboutUs.scss';
+@import './containers/Facts.scss';
+@import './containers/Services.scss';
