--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,3 +16,5 @@
 @import './containers/AboutUs.scss';
 @import './containers/Facts.scss';
 @import './containers/Services.scss';
+@import './containers/Features.scss';
+@import './containers/WhatWeDo.scss';
