--- a/src/scss/containers/AboutUs.scss
+++ b/src/scss/containers/AboutUs.scss
@@ -2,7 +2,7 @@
     grid-area: AboutUs;
     display: grid;
     grid-template-columns: minmax(1.5rem, 1fr) minmax(min-content, 120rem) minmax(1.5rem, 1fr);
-    grid-template-rows: calc(22rem + 3px) max-content calc(44rem + 3px);
+    grid-template-rows: calc(22rem + 3px) max-content 45rem;
     grid-template-areas: '. title .' '. text .' '. images .';
 
     .SectionTitle {
@@ -30,7 +30,6 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-bottom: 2.3rem;
             position: relative;
             z-index: 100;
             transition: all .3s ease-in-out;
@@ -50,9 +49,6 @@
             }
 
             &-icon {
-                // background: url('../img/aboutus-person-icon.png');
-                // width: 3.4rem;
-                // height: 2.4rem;
                 margin-top: 1rem;
                 opacity: 0;
                 transition: all .3s ease-in-out;
