--- a/src/scss/containers/App.scss
+++ b/src/scss/containers/App.scss
@@ -2,5 +2,5 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 100rem min-content;
-    grid-template-areas: 'Banner' 'AboutUs' 'Facts' 'Services' 'Features' 'WhatWeDo';
+    grid-template-areas: 'Banner' 'AboutUs' 'Facts' 'Services' 'Features' 'WhatWeDo' 'Quote' 'OurTeam' 'Logos' 'Work' 'Testimonial' 'PplSay';
 }
