--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,6 +8,7 @@
 
 @import './components/Divider.scss';
 @import './components/SectionTitle.scss';
+@import './components/Gallery.scss';
 
 // Containers
 
@@ -18,3 +19,9 @@
 @import './containers/Services.scss';
 @import './containers/Features.scss';
 @import './containers/WhatWeDo.scss';
+@import './containers/Quote.scss';
+@import './containers/OurTeam.scss';
+@import './containers/Logos.scss';
+@import './containers/Work.scss';
+@import './containers/Testimonial.scss';
+@import './containers/PplSay.scss';
